--- a/resources/conf/caps/bstack-local-config.yaml
+++ b/resources/conf/caps/bstack-local-config.yaml
@@ -20,7 +20,7 @@ cloudDriver:
   user: BROWSERSTACK_USERNAME
   accessKey: BROWSERSTACK_ACCESSKEY
   localTunnel:
-    enabled: false
+    enabled: true
     local_options:
       forcelocal: true
       force: true
