Update `Pipfile` for Cross-Platform Compatibility and Python Version Flexibility
- Adjusted `pyobjc-core` dependency in `Pipfile` to install only on macOS, resolving installation errors on non-macOS systems.
- Updated Python version requirement to `>=3.8`, allowing greater flexibility across different Python versions.
- Ensured compatibility of other package versions with newer Python versions.

--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,10 @@ robotframework = "==6.0"
 robotframework-pabot = "==2.6.0"
 robotframework-seleniumlibrary = "==6.0"
 browserstack-sdk = "*"
+# Conditional dependencies for macOS
+pyobjc-core = {version = "*", markers = "sys_platform == 'darwin'"}
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
-python_full_version = "3.11.6"
+python_version = ">=3.8"
